[gd_scene load_steps=4 format=3 uid="uid://de13sv2f08h0t"]

[ext_resource type="Script" path="res://gamelogic/finish_line.gd" id="1_bg5va"]

[sub_resource type="BoxShape3D" id="BoxShape3D_h73ej"]
size = Vector3(10.5857, 5.19274, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kj4oy"]
font_size = 50

[node name="FinishLine" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.696801, 0, 0)
script = ExtResource("1_bg5va")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="."]
transform = Transform3D(1.665, 0, 0, 0, 1.665, 0, 0, 0, 1.665, 0.986206, 0, 0)
use_collision = true
polygon = PackedVector2Array(-5.04248, -0.0478866, -4.85557, 3.75361, 3.85111, 7.42077, 3.52933, 0, 2.60252, -0.0478866, 2.62946, 4.17909, -4.08723, 3.12755, -4.31753, 0.00483753)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.263712, 2.5548, -0.721068)
shape = SubResource("BoxShape3D_h73ej")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "aaa"
label_settings = SubResource("LabelSettings_kj4oy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -246.0
offset_right = 160.0
offset_bottom = -211.0
grow_horizontal = 2
grow_vertical = 0
text = "Reset"

[node name="back" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -247.0
offset_right = -8.0
offset_bottom = -212.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/back" to="." method="_on_back_pressed"]
